src/assets/js/pages/cart/cart.css
.cart-container {
  display: flex;
  justify-content: space-between;
  gap: 1rem;
  flex-wrap: wrap;
}

.cart-list {
  display: flex;
  flex-direction: column;
  gap: 20px;
}

.cart-item {
  display: grid;
  grid-template-columns: 7rem 1fr;
  gap: 20px;
  width: 51.3125rem;
  height: 11.9375rem;
  flex-shrink: 0;
  border-radius: 1.5rem;
  border: 2px solid #e6e6e6;
  background: #fafaf5;
}

.item-image {
  width: 9.5rem;
  height: 9.5rem;
  padding: 5px;
  margin-right: 20px;
  object-fit: contain;
}

.item-price {
  color: var(--clr-green);
  font-weight: 600;
}

.item-cart-not-buy {
  opacity: 0.5;
}

.btn-toggle {
  display: inline-flex;
  padding: 0.46875rem 1.375rem 0.40625rem 1.4375rem;
  justify-content: center;
  align-items: center;
  border-radius: 1.25rem;
  border: 1px solid #426b1f;
  background: #fafaf5;
}

.btn-remove {
  display: inline-flex;
  padding: 0.46875rem 1.6875rem 0.40625rem 1.6875rem;
  justify-content: center;
  align-items: center;
  border-radius: 1.25rem;
  background: #426b1f;
  color: white;
  border: 0;
}

.order-summary-card {
  width: 24.6875rem;
  height: 18.0625rem;
  flex-shrink: 0;
  border-radius: 1.5rem;
  border: 2px solid #e6e6e6;
  background: #fafaf5;
  display: flex;
  flex-direction: column;
  gap: 10px;
  padding: 10px;
}

.continue-to-payment-btn {
  display: inline-flex;
  padding: 0.5rem 1rem 0.5rem 1.5rem;
  justify-content: center;
  align-items: center;
  gap: 7rem;
  border-radius: 0.5rem;
  background: #426b1f;
  color: white;
  font-size: 18px;
  font-weight: 500;
  text-align: center;
  margin-top: auto;
  margin-bottom: 20px;
  border: 0;

  &:disabled {
    cursor: not-allowed;
    opacity: 0.5;
  }
}

.summary-line {
  display: flex;
  justify-content: space-between;
}

.summary-header {
  display: flex;
  justify-content: space-between;
  align-items: baseline;
}

.item-controls {
  display: inline-flex;
  gap: 10px;
}

.quantity {
  border: 1px solid var(--clr-neutral-300);
  border-radius: 1.25rem;
  width: 80px;
  margin: 0;
  display: flex;
  justify-content: space-around;
  align-items: center;
  background-color: white;
}

.quantity-input {
  width: 40px;
  text-align: center;
  border: none;
  color: black;
  font-weight: 600;
  font-size: 16px;
}

.quantity-input:focus {
  outline: none;
}

.plus,
.minus {
  cursor: pointer;
  font-weight: 550;
  text-align: center;
  font-size: 16px;
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .cart-list {
    width: 100%;
  }

  .cart-item {
    height: auto;
    width: 100%;
  }
}

@media screen and (max-width: 767px) {
  .cart-container {
    flex-direction: column;
    gap: 80px;
  }
  .cart-item {
    display: grid;
    grid-template-columns: 8rem 1fr;
    align-items: center;
    width: 100%;
    height: fit-content;
    padding: 0 0.5rem 0.5rem;
  }
  .item-controls {
    display: flex;
    flex-direction: column;
    gap: 20px;
  }
  .btn-remove,
  .btn-toggle {
    width: fit-content;
  }

  .quantity {
    height: 29.5px;
  }
}

